overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ body {
   min-width: 320px;
   max-width: 1800px;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 header {
